<resources>
    <string name="AUTO">Auto</string>
    <string name="Abb_AUTO">Auto</string>
    <string name="Title_About_Camera">About Camera</string>
    <string name="Title_Apv">APV</string>
    <string name="Title_AutoHDR">Auto HDR</string>
    <string name="Title_Auto_Photo_Enhancer">Auto photo enhancer</string>
    <string name="Title_Camcorder_HDR10">HDR10+ videos</string>
    <string name="Title_Contact_us">Contact us</string>
    <string name="Title_Custom_Filter">Custom filters</string>
    <string name="Title_Customization_Service">Customization Service</string>
    <string name="Title_LocationTag">Location tags</string>
    <string name="Title_Motion_photos">Motion photos</string>
    <string name="Title_Permissions">Permissions</string>
    <string name="Title_Photo_format">Photo format</string>
    <string name="Title_PicturesAsPreviewed">Save selfies as previewed</string>
    <string name="Title_QRCode">Scan QR codes</string>
    <string name="Title_QuickShot">Quick launch</string>
    <string name="Title_Raw_File">RAW copies</string>
    <string name="Title_Save_to_external_storage">Save to external storage</string>
    <string name="Title_SettingsToKeep">Settings to keep</string>
    <string name="Title_ShootingMethod">Shooting Methods</string>
    <string name="Title_ShutterSound">Shutter sound</string>
    <string name="Title_Storage">Storage location</string>
    <string name="Title_Swipe_up_down_to">Swipe up/down to</string>
    <string name="Title_TouchVibrations">Vibration feedback</string>
    <string name="Title_TrackingAF">Tracking auto-focus</string>
    <string name="Title_VideoStabilisation">Video stabilisation</string>
    <string name="Title_Video_Auto_FPS">Auto FPS</string>
    <string name="Title_Viewmode">Full screen view (16:9)</string>
    <string name="Title_Watermark">Watermark</string>
    <string name="Title_audio">Audio</string>
    <string name="Title_camcorder_hlg">HDR</string>
    <string name="Title_camera_assistant">Camera Assistant</string>
    <string name="Title_composition_guide">Shot suggestions</string>
    <string name="Title_document_scan">Document scan</string>
    <string name="Title_document_scan_and_text">Scan documents and text</string>
    <string name="Title_dual_recording">Dual recordings</string>
    <string name="Title_features">Features</string>
    <string name="Title_guide_lines">Composition guide</string>
    <string name="Title_high_bitrate_video">High bitrate videos</string>
    <string name="Title_high_efficiency_video">High efficiency videos</string>
    <string name="Title_how_to_use">How to use</string>
    <string name="Title_intelligence">Intelligent features</string>
    <string name="Title_log_video">Log</string>
    <string name="Title_photos">Photos</string>
    <string name="Title_privacy">Privacy</string>
    <string name="Title_scan">Scan</string>
    <string name="Title_scan_qr">Scan QR codes</string>
    <string name="Title_scan_text">Scan text</string>
    <string name="Title_useful_features">General</string>
    <string name="Title_video_format">Video format</string>
    <string name="Title_video_format_h264">H.264 (Most compatible)</string>
    <string name="Title_video_format_hevc">HEVC (High efficiency)</string>
    <string name="Title_videos">Videos</string>
    <string name="Title_vivino_privacy_policy">"Vivino's privacy policy"</string>
    <string name="apv_422_hq">APV 422 HQ</string>
    <string name="apv_422_lq">APV 422 LQ</string>
    <string name="apv_hdr">HDR</string>
    <string name="apv_log">LOG</string>
    <string name="apv_preference_description">Capture cinematic-quality videos using the Advanced PRofessional Video (APV) codec.</string>
    <string name="apv_profile">Profile</string>
    <string name="camcorder_HDR10_summary">"Optimize the contrast and color of rear camera videos recorded in Video and Pro video modes. Some apps and websites don't support HDR10+."</string>
    <string name="camcorder_front_HEVC_summary">"Save space without sacrificing video quality. The results will be saved in HEVC format, which some apps and websites don't support."</string>
    <string name="camcorder_hlg_summary">Capture a wider range of color and contrast by recording in 10-bit HDR, which is compatible with most apps and devices.</string>
    <string name="category_professional_video_capture">Professional video capture</string>
    <string name="category_video_capture">Video capture</string>
    <string name="composition_guide_summary">Get on-screen guides to help you line up great shots.</string>
    <string name="customization_service_summary">Get personalized content based on how you use your phone.</string>
    <string name="dep_camera_assistant">dep_camera_assistant</string>
    <string name="dep_empty">dep_empty</string>
    <string name="dep_etc">dep_etc</string>
    <string name="dep_features">dep_features</string>
    <string name="dep_intelligence">dep_intelligence</string>
    <string name="dep_pictures">dep_pictures</string>
    <string name="dep_privacy">dep_privacy</string>
    <string name="dep_professional_codec">dep_professional_codec</string>
    <string name="dep_useful_features">dep_useful_features</string>
    <string name="dep_video_format">dep_video_format</string>
    <string name="dep_videos">dep_videos</string>
    <string name="hdr_apply_setting_description">Make your pictures pop by capturing more detail in the bright and dark areas of your shots.</string>
    <string name="high_bitrate_video_summary">Increase the bitrate of videos recorded in Video and Pro video modes. High bitrate videos are saved in HEVC format and may be larger than normal videos.</string>
    <string name="key_about_camera">about_camera</string>
    <string name="key_additional_scene_document_scan">additional_scene_document_scan</string>
    <string name="key_advanced_intelligent_options">quality_optimization</string>
    <string name="key_apv">apv</string>
    <string name="key_audio">audio</string>
    <string name="key_camera_assistant">camera_assistant</string>
    <string name="key_capture_range_before_and_after_shutter">motion_photo_capture_mode_before_1_5_after_1_5</string>
    <string name="key_capture_range_before_shutter_only">motion_photo_capture_mode_before_3_sec_only</string>
    <string name="key_capture_type_hdr">apv_capture_type_hdr</string>
    <string name="key_capture_type_log">apv_capture_type_log</string>
    <string name="key_composition_guide">composition_guide</string>
    <string name="key_contact_us">contact_us</string>
    <string name="key_custom_filters">custom_filters</string>
    <string name="key_customization_service">customization_service</string>
    <string name="key_dual_recording_save_option">multi_recording_save_option</string>
    <string name="key_features">features</string>
    <string name="key_guide_line">guide_line</string>
    <string name="key_hdr10_recording">hdr10_recording</string>
    <string name="key_hdr_enabled">hdr_enabled</string>
    <string name="key_hevc">hevc</string>
    <string name="key_high_bitrate_video">high_bitrate_video</string>
    <string name="key_hlg">hlg</string>
    <string name="key_how_to_use">how_to_use</string>
    <string name="key_location_tag">location_tag</string>
    <string name="key_log_video">log_video</string>
    <string name="key_motion_photo">motion_photos</string>
    <string name="key_motion_photo_capture_range">motion_photo_capture_range</string>
    <string name="key_motion_photo_shutter_sound">motion_photo_sound</string>
    <string name="key_motion_photo_shutter_sound_timing">motion_photo_sound_timing</string>
    <string name="key_permissions">permissions</string>
    <string name="key_picture_format">picture_format</string>
    <string name="key_profile">apv_profile</string>
    <string name="key_profile_hq">apv_profile_422_hq</string>
    <string name="key_profile_lq">apv_profile_422_lq</string>
    <string name="key_qr_code_detection">qr_code_detection</string>
    <string name="key_quick_launch">quick_launch</string>
    <string name="key_reset_settings">reset_settings</string>
    <string name="key_save_as_flipped">save_as_flipped</string>
    <string name="key_save_options">save_options</string>
    <string name="key_save_videos_to_external_storage">save_videos_to_external_storage</string>
    <string name="key_scan">scan</string>
    <string name="key_scan_affect_mode_description">scan_affect_mode_description</string>
    <string name="key_scan_documents">scan_documents</string>
    <string name="key_scan_text">scan_text</string>
    <string name="key_settings_to_keep">settings_to_keep</string>
    <string name="key_shooting_method">shooting_method</string>
    <string name="key_shutter_sound">shutter_sound</string>
    <string name="key_shutter_sound_timing_when_picture_is_taken">motion_photo_sound_timing_when_picture_taken</string>
    <string name="key_shutter_sound_timing_when_recording_finishes">motion_photo_sound_timing_when_recording_finishes</string>
    <string name="key_shutter_sound_type_camera_shutter_sound">motion_photo_sound_type_camera</string>
    <string name="key_shutter_sound_type_recording_finished_sound">motion_photo_sound_type_motion_photo</string>
    <string name="key_storage">storage</string>
    <string name="key_swipe_up_down">swipe_up_down</string>
    <string name="key_touch_vibrations">touch_vibrations</string>
    <string name="key_tracking_af">tracking_af</string>
    <string name="key_video_auto_fps">video_auto_fps</string>
    <string name="key_video_format">video_format</string>
    <string name="key_video_format_dim_description">video_format_dim_description</string>
    <string name="key_video_format_h264">video_format_h264</string>
    <string name="key_video_format_hevc">video_format_hevc</string>
    <string name="key_video_stabilisation">video_stabilisation</string>
    <string name="key_view_mode">view_mode</string>
    <string name="key_vivino_privacy_policy">vivino_privacy_policy</string>
    <string name="key_watermark">watermark</string>
    <string name="location_tag_summary">Add tags to your pictures and videos so you can see where they were taken.</string>
    <string name="motion_photo_before_and_after_shutter">Before and after shutter</string>
    <string name="motion_photo_before_shutter_only">Before shutter only</string>
    <string name="motion_photo_capture_range">Motion capture range</string>
    <string name="motion_photo_shutter_sound">Audio feedback</string>
    <string name="motion_photo_sound_timing_header">Timing</string>
    <string name="picture_format_summary">"Save both JPEG and RAW copies of pictures taken in Pro mode. Color tone adjustments won't be shown in RAW copies."</string>
    <string name="pictures_as_previewed_summary">Save selfies and selfie videos as they appear in the preview without flipping them.</string>
    <string name="reset_title">Reset settings</string>
    <string name="scan_affect_mode_description">Scanning only works with the rear camera in Photo mode.</string>
    <string name="settings">Camera settings</string>
    <string name="top_level_key">top_level_key</string>
    <string name="tracking_af_summary">Keep the rear camera focused on the selected subject even if they move.</string>
    <string name="value_motion_photo_sound_timing_when_picture_is_taken">When picture is taken</string>
    <string name="value_motion_photo_sound_timing_when_recording_finishes">When recording finishes</string>
    <string name="value_motion_photo_sound_type_camera_shutter">Camera shutter sound</string>
    <string name="value_motion_photo_sound_type_recording_finished">Recording finished sound</string>
    <string name="video_auto_fps_summary">Record brighter videos in low-light conditions by automatically optimizing the frame rate in Video mode.</string>
    <string name="viewmode_tag_summary">Preview pictures and videos using the full screen.</string>
</resources>